Make device specific dependencies 'extras'

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,14 +30,16 @@ install_requires =
   labscript_utils>=2.13.2
   numpy>=1.15.1
   pillow
-  PyDAQmx
-  PyNIVision
   pyserial
   qtutils>=2.2.3
-  spinapi
   zprocess>=2.18.0
 setup_requires =
   setuptools_scm
+
+[options.extras_require]
+spincore = spinapi
+nidaqmx = PyDAQmx
+nivision = PyNIVision
 
 [dist_conda]
 pythons = 3.6, 3.7, 3.8
