Don't import labscript_utils to get own version

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ packages = find:
 python_requires = >=3.6
 install_requires =
   blacs>=2.7.0
+  importlib_metadata ; python_version<'3.8'
   labscript>=2.6.0
   labscript_utils>=2.13.2
   numpy>=1.15.1
