--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = labscript_devices
+name = labscript-devices
 description = Device drivers for hardware controlled by the labscript suite
 long_description = file: README.md
 long_description_content_type = text/markdown
