Add standard workflow and move setup requires into pyproject.toml

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = labscript_devices
+name = labscript-devices
 description = Device drivers for hardware controlled by the labscript suite
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -37,8 +37,3 @@ install_requires =
   qtutils>=2.2.3
   spinapi
   zprocess>=2.18.0
-setup_requires =
-  setuptools_scm
-
-[dist_conda]
-pythons = 3.6, 3.7, 3.8
