Empty sphinx project following our template

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,10 +25,10 @@ include_package_data = True
 packages = find:
 python_requires = >=3.6
 install_requires =
-  blacs>=2.7.0
+  blacs>=3.0.0rc1
   importlib_metadata
-  labscript>=2.6.0
-  labscript_utils>=2.13.2
+  labscript>=3.0.0rc1
+  labscript_utils>=3.0.0rc1
   numpy>=1.15.1
   pillow
   PyDAQmx
@@ -37,3 +37,11 @@ install_requires =
   qtutils>=2.2.3
   spinapi
   zprocess>=2.18.0
+
+[options.extras_require]
+docs = 
+  PyQt5
+  Sphinx==3.0.1
+  sphinx-rtd-theme==0.4.3
+  recommonmark==0.6.0
+  m2r==0.2.1
