Update dependencies in setup.cfg
Bumped blacs, labscript and labscript_utils versions to `>=3.0.0`

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,10 +25,10 @@ include_package_data = True
 packages = find:
 python_requires = >=3.6
 install_requires =
-  blacs>=3.0.0rc1
+  blacs>=3.0.0
   importlib_metadata
-  labscript>=3.0.0rc1
-  labscript_utils>=3.0.0rc1
+  labscript>=3.0.0
+  labscript_utils>=3.0.0
   numpy>=1.15.1
   pillow
   PyDAQmx
