Adding unlisted dependencies so doc builds can successfully import more components.

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,12 +26,15 @@ packages = find:
 python_requires = >=3.6
 install_requires =
   blacs>=3.0.0
+  runmanager>=3.0.0
   importlib_metadata
   labscript>=3.0.0
   labscript_utils>=3.0.0
   numpy>=1.15.1
   pillow
+  tqdm
   PyDAQmx
+  PyVISA
   PyNIVision
   pyserial
   qtutils>=2.2.3
