--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,6 @@ defaults:
 
 env:
   PACKAGE_NAME: labscript-devices
-  SCM_VERSION_SCHEME: release-branch-semver
   SCM_LOCAL_SCHEME: no-local-version
   ANACONDA_USER: labscript-suite
 
@@ -111,8 +110,8 @@ jobs:
           else
               CONDA_BUILD_ARGS=""
           fi
-          echo "::set-env name=CONDA_INSTALLER::$CONDA_INSTALLER"
-          echo "::set-env name=CONDA_BUILD_ARGS::$CONDA_BUILD_ARGS"
+          echo "CONDA_INSTALLER=$CONDA_INSTALLER" >> $GITHUB_ENV
+          echo "CONDA_BUILD_ARGS=$CONDA_BUILD_ARGS" >> $GITHUB_ENV
 
       - name: Conda package (Unix)
         if: runner.os != 'Windows'
@@ -211,7 +210,7 @@ jobs:
         if: github.event.ref_type == 'tag'
         run: |
           VERSION="${GITHUB_REF/refs\/tags\/v/}"
-          echo "::set-env name=VERSION::$VERSION"
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
 
       - name: Create GitHub Release
         if: github.event.ref_type == 'tag'
