--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,8 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
 
 [options]
 zip_safe = False
@@ -45,7 +47,8 @@ install_requires =
 [options.extras_require]
 docs = 
   PyQt5
-  Sphinx==3.5.3
+  Sphinx==4.4.0
   sphinx-rtd-theme==0.5.2
   recommonmark==0.6.0
   m2r==0.2.1
+  mistune<2.0.0
