--- a/readthedocs.yaml
+++ b/readthedocs.yaml
@@ -4,6 +4,19 @@
 # Required
 version: 2
 
+# Set build environment options
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.11"
+  jobs:
+    # ensure full git repo is pulled so setuptools_scm gets versions correctly on install
+    # https://docs.readthedocs.com/platform/stable/build-customization.html#unshallow-git-clone
+    post_checkout:
+      - git fetch --unshallow || true
+      - git config remote.origin.fetch '+refs/heads/*:refs/remotes/origin/*' || true
+      - git fetch --all --tags || true
+
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
   builder: dirhtml
@@ -15,13 +28,11 @@ formats:
   - pdf
   - epub
 
-# Optionally set the version of Python and requirements required to build your docs
+# Optionally set the requirements required to build your docs
 python:
-   version: 3.7
    install:
       - method: pip
         path: .
         extra_requirements:
             - docs
-   system_packages: true
    
